@@ -1,5 +1,11 @@
 2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/gimv_image_view_draw.c: Rename from image_view_draw.c
+	* src/gimv_thumb_view_album.c: Rename from thumbnail_view_album.c
+	* src/Makefile.am: Follow tha change.
+
+2007-10-17 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_exif_view.[ch]: Rename from src/exif_view.[ch]
 	* src/Makefile.am, src/gimv_image_win.c. src/gimv_thumb_view.c:
 	Follow the change.
